@@ -16,6 +16,7 @@ v.0.5dev (ongoing development)
  * Introduce shared/defines.h to collect commonly used macros
  + new driver: SureElec for devices made by SURE Electronics (Laurent Latil)
  * hd44780-4bit: Fix bug not checking for keypad rows 7-10 correctly
+ * Modify serial drivers to use cfmakeraw
 
 v0.5.3
  + lcdexec: notification when called program finishes
